# rag

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
agents/: graph.py  orchestrator.py  product_finder.py  recommender.py  state.py  synthesizer.py  tools.py
evaluation/: evaluate.py  generate_gold_truth.py  gold_truth.json
evaluation/reports/: report_20260429_014240.json
utility/: auth.py  db.py  generate_embeddings.py  ingest_amazon_reviews.py  llm.py  migrate_fts.py
